<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/here_will_be_longitude"
        app:layout_constraintBottom_toTopOf="@+id/button_get_weather"
        app:layout_constraintStart_toStartOf="@+id/editTextLatitude"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_longitude"
        app:layout_constraintStart_toStartOf="@+id/editTextLatitude"
        app:layout_constraintTop_toBottomOf="@+id/editTextLatitude" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="269dp"
        android:layout_height="59dp"
        android:text="@string/main_activity_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_get_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/txtView_cityName"
        android:layout_width="266dp"
        android:layout_height="63dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/button_get_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yoursLocation"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/button_get_weather"
        android:layout_width="241dp"
        android:layout_height="115dp"
        android:layout_marginBottom="116dp"
        android:text="@string/button_show_weather"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.286" />

    <TextView
        android:id="@+id/recievedText"
        android:layout_width="311dp"
        android:layout_height="71dp"
        android:text=""
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_get_weather"
        app:layout_constraintVertical_bias="0.987" />

    <TextView
        android:id="@+id/label_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_weather"
        app:layout_constraintBottom_toTopOf="@+id/recievedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_get_weather"
        app:layout_constraintVertical_bias="0.511" />

    <TextView
        android:id="@+id/yoursLocation"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/you_are_locate_in"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/label_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_latitude"
        app:layout_constraintBottom_toTopOf="@+id/editTextLatitude"
        app:layout_constraintStart_toStartOf="@+id/txtView_cityName"
        app:layout_constraintTop_toBottomOf="@+id/txtView_cityName" />

    <EditText
        android:id="@+id/editTextLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Here will be latitude"
        app:layout_constraintBottom_toTopOf="@+id/button_get_weather"
        app:layout_constraintStart_toStartOf="@+id/label_latitude"
        app:layout_constraintTop_toBottomOf="@+id/txtView_cityName"
        app:layout_constraintVertical_bias="0.464" />

    <Button
        android:id="@+id/btnGetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GPS"
        app:layout_constraintBottom_toTopOf="@+id/editTextLongitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextLatitude"
        app:layout_constraintTop_toBottomOf="@+id/editTextLatitude" />

</androidx.constraintlayout.widget.ConstraintLayout>